Fix #84 Number alignment

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -135,7 +135,8 @@ li {
 
 ol,
 ul {
-    list-style-position: inside;
+    list-style-position: outside;
+    margin-left: 1em;
 }
 
 hr {
