--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -172,6 +172,6 @@ figure.highlight {
 }
 
 table.dataframe {
-    border: 0px solid $border-color;
+    border: 0 solid $border-color;
     border-collapse: collapse;
 }
